<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/radius_dialog_10"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center"
            android:maxLines="2"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/delete_file"
            android:textColor="@color/color_1D1D1D"
            android:textSize="@dimen/_16sdp"
            app:autoSizeMinTextSize="@dimen/_12sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/do_you_want_to_delete_file"
            android:textColor="@color/color_1D1D1D"
            android:textSize="@dimen/_14sdp"
            app:autoSizeMinTextSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_content">

            <TextView
                android:textAllCaps="true"
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:padding="@dimen/_6sdp"
                android:text="@string/cancel"
                android:textColor="@color/color_8E8E8E"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:textAllCaps="true"
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_6sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/ok"
                android:textColor="@color/color_DA0A19"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/btn_no"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>