<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:background="@color/tokenBlack70">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:background="@drawable/bg_white_radius"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/color_1D1D1D"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ll_input_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/color_0094FF"
            app:hintTextColor="@color/color_0094FF"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/color_363636"
                android:textCursorDrawable="@drawable/color_cursor" />

            <requestFocus />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ll_input_again"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/enter_password_again"
            app:boxStrokeColor="@color/color_0094FF"
            app:hintTextColor="@color/color_0094FF"
            app:layout_constraintTop_toBottomOf="@+id/ll_input_text">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password_again"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/color_363636"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_input_again">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_6sdp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/color_8E8E8E"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_6sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/color_0094FF"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>